Ajustando código com ponto antes da barra ./

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="/src/css/responsive.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -38,7 +38,7 @@
 
         <section class="secao-com-texto" id="quem-somos">
             <header>
-                <img src="/src/images/logo-secoes.png">
+                <img src="./src/images/logo-secoes.png">
                 <h2>Quem Somos</h2>
             </header>
             <p>
@@ -55,7 +55,7 @@
 
         <section class="secao-com-texto onde-estamos" id="onde-estamos">
             <header>
-                <img src="/src/images/logo-secoes.png">
+                <img src="./src/images/logo-secoes.png">
                 <h2>Onde Estamos</h2>
             </header>
             <p>
@@ -79,7 +79,7 @@
 
     <footer class="rodape">
         <a href="index.html"></a>
-            <img src="/src/images/logo.jpg">
+            <img src="./src/images/logo.jpg">
         <ul>
             <li><a href="#quem-somos">Quem somos</a></li>
             <li><a href="#onde-estamos">Onde estamos</a></li>
@@ -88,11 +88,11 @@
         <div class="conteudo-de-baixo">
             <div class="redes-sociais">
                 <a href="#" target="_blank">
-                    <img class="facebook" title="logo Facebook" src="/src/images/face.png" alt="logo Facebook">
+                    <img class="facebook" title="logo Facebook" src="./src/images/face.png" alt="logo Facebook">
                 </a>
                 
                 <a href="#" target="_blank">
-                    <img class="instagram" title="logo Instagram" src="/src/images/insta.png" alt="logo Instagram">
+                    <img class="instagram" title="logo Instagram" src="./src/images/insta.png" alt="logo Instagram">
                 </a>
             </div>
             <div class="copyright">© 2021 Code Café</div>
